test/Fail/Issue1362.err
Issue1362.agda:25.7-41: error: [UnequalTerms]
quote D != quote M₁.D of type QName
when checking that the inferred type of an application
  getType (quote D) ≡ getType (quote D)
matches the expected type
  type₁ ≡ type₂
